--- a/board/hc32f460_core/project_template/project_eclipse/.project
+++ b/board/hc32f460_core/project_template/project_eclipse/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>example_hc32f460_core</name>
+	<name>template_hc32f460_core</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -28,52 +28,47 @@
 		<link>
 			<name>3rdparty</name>
 			<type>2</type>
-			<locationURI>PARENT-4-PROJECT_LOC/3rdparty</locationURI>
+			<locationURI>copy_PARENT123/3rdparty</locationURI>
 		</link>
 		<link>
 			<name>arch</name>
 			<type>2</type>
-			<locationURI>PARENT-4-PROJECT_LOC/arch</locationURI>
+			<locationURI>copy_PARENT123/arch</locationURI>
 		</link>
 		<link>
 			<name>bsp_common</name>
 			<type>2</type>
-			<locationURI>PARENT-3-PROJECT_LOC/bsp_common</locationURI>
+			<locationURI>copy_PARENT1234/bsp_common</locationURI>
 		</link>
 		<link>
 			<name>components</name>
 			<type>2</type>
-			<locationURI>PARENT-4-PROJECT_LOC/components</locationURI>
-		</link>
-		<link>
-			<name>examples</name>
-			<type>2</type>
-			<locationURI>PARENT-4-PROJECT_LOC/examples</locationURI>
+			<locationURI>copy_PARENT123/components</locationURI>
 		</link>
 		<link>
 			<name>interface</name>
 			<type>2</type>
-			<locationURI>PARENT-4-PROJECT_LOC/interface</locationURI>
+			<locationURI>copy_PARENT123/interface</locationURI>
 		</link>
 		<link>
 			<name>soc</name>
 			<type>2</type>
-			<locationURI>PARENT-4-PROJECT_LOC/soc</locationURI>
+			<locationURI>copy_PARENT123/soc</locationURI>
 		</link>
 		<link>
 			<name>startup</name>
 			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/startup</locationURI>
+			<locationURI>copy_PARENT12345/startup</locationURI>
 		</link>
 		<link>
 			<name>user_code</name>
 			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/user_code</locationURI>
+			<locationURI>copy_PARENT12345/user_code</locationURI>
 		</link>
 		<link>
 			<name>user_config</name>
 			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/user_config</locationURI>
+			<locationURI>copy_PARENT12345/user_config</locationURI>
 		</link>
 	</linkedResources>
 	<variableList>
@@ -88,6 +83,18 @@
 		<variable>
 			<name>copy_PARENT12</name>
 			<value>$%7Bcopy_PARENT1%7D/hc32f460_core/project_example</value>
+		</variable>
+		<variable>
+			<name>copy_PARENT123</name>
+			<value>file:/E:/AMetal/gitlab/ametal</value>
+		</variable>
+		<variable>
+			<name>copy_PARENT1234</name>
+			<value>$%7Bcopy_PARENT123%7D/board</value>
+		</variable>
+		<variable>
+			<name>copy_PARENT12345</name>
+			<value>$%7Bcopy_PARENT1234%7D/hc32f460_core/project_template</value>
 		</variable>
 	</variableList>
 </projectDescription>
