--- a/board/hk32f103rbt6_core/project_example/projects_eclipse/.project
+++ b/board/hk32f103rbt6_core/project_example/projects_eclipse/.project
@@ -75,6 +75,26 @@
 			<type>2</type>
 			<locationURI>copy_PARENT123456789101112/user_config</locationURI>
 		</link>
+		<link>
+			<name>examples/soc</name>
+			<type>2</type>
+			<location>E:/AMetal/gitlab/ametal/examples/soc</location>
+		</link>
+		<link>
+			<name>examples/board/hk32f103rbt6_core</name>
+			<type>2</type>
+			<location>E:/AMetal/gitlab/ametal/examples/board/hk32f103rbt6_core</location>
+		</link>
+		<link>
+			<name>examples/std/input</name>
+			<type>2</type>
+			<location>E:/AMetal/gitlab/ametal/examples/std/input</location>
+		</link>
+		<link>
+			<name>examples/std/led</name>
+			<type>2</type>
+			<location>E:/AMetal/gitlab/ametal/examples/std/led</location>
+		</link>
 	</linkedResources>
 	<variableList>
 		<variable>
@@ -127,7 +147,7 @@
 		</variable>
 		<variable>
 			<name>copy_PARENT123456789101112</name>
-			<value>$%7Bcopy_PARENT1234567891011%7D/hk32f103rbt6_core/project_example</value>
+			<value>$%7Bcopy_PARENT1234567891011%7D/hk32f103rbt6_core/project_template</value>
 		</variable>
 	</variableList>
 </projectDescription>
