--- a/board/am42x_core/project_template/project_keil5/template_am42x_core.uvprojx
+++ b/board/am42x_core/project_template/project_keil5/template_am42x_core.uvprojx
@@ -1280,7 +1280,7 @@
           <Device>HC32L196PCTA</Device>
           <Vendor>HDSC</Vendor>
           <PackID>HDSC.HC32L19X.1.0.0</PackID>
-          <PackURL>https://raw.githubusercontent.com/zlgmcu/pack/master/</PackURL>
+          <PackURL>https://raw.githubusercontent.com/hdscmcu/pack/master/</PackURL>
           <Cpu>IROM(0x00000000,0x40000) IRAM(0x20000000,0x8000) CPUTYPE("Cortex-M0+") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
